# gwa-api

./: COMPLIANCE.yaml  README.md  USER-JOURNEY.md  renovate.json  sonar-project.properties
.github/: dependabot.yaml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: gwa-api-bug-issue-template.md  gwa-api-feature-request-issue-template.md
.github/workflows/: dev.yml  gh-pages.yml  jira.yaml  master.yml  pr-build.yml  pr-reminder.yaml
docs/: AVAILABLE-PLUGINS.md  COMMON-CONFIG.md  OCP4-MIGRATION.md  SSL.md
docs/guides/: intro-signed-jwt.md  intro-signed-jwt.yaml  tutorial-idp-client-cred-flow.md  tutorial-idp-client-cred-flow.yaml  user-journey.md  user-journey.yaml
docs/samples/service-plugins/: service-acl.yaml  service-gwa-endpoint.yaml  service-gwa-ip-anonymity.yaml  service-ip-restriction.yaml  service-jwt-keycloak.md  service-jwt-keycloak.yaml  service-key-auth.yaml  (+4 more)
microservices/compatibilityApi/: .gitignore  Dockerfile  README.md  app.py  entrypoint.sh  main.py  pyproject.toml
microservices/compatibilityApi/clients/: deck.py
microservices/compatibilityApi/config/: settings.py
microservices/compatibilityApi/routers/: routes.py
microservices/compatibilityApi/tests/: test_conversion.py  test_deck.py  test_routes.py  test_transforms.py
microservices/compatibilityApi/utils/: transforms.py
microservices/gatewayApi/: .gitignore  Dockerfile  README.md  app.py  config.py  entrypoint.sh  pyproject.toml  requirements.txt  setup.py  swagger.py  wsgi.py
microservices/gatewayApi/auth/: auth.py  authz.py  token.py  uma.py
microservices/gatewayApi/clients/: bcdc.py  compatibility.py  kcprotect.py  keycloak.py  kong.py  ocp_gateway_secret.py  ocp_networksecuritypolicy.py  ocp_routes.py  openshift.py  portal.py
microservices/gatewayApi/clients/uma/: kcprotect.py  resourceset.py
microservices/gatewayApi/config/: default.json.template  test.json
microservices/gatewayApi/patterns/: eval.py
microservices/gatewayApi/patterns/sdx/: access_point_r1.py  application_r1.py  service_r1.py
microservices/gatewayApi/samples/: catalog_example.json  read_from_bcdc.json
microservices/gatewayApi/templates/keycloak/: client.json
microservices/gatewayApi/tests/: conftest.py  test_api_health.py  testutils.py
microservices/gatewayApi/tests/clients/: test_ocp_routes.py  test_uma_resourceset.py
microservices/gatewayApi/tests/patterns/: test_pattern.py
microservices/gatewayApi/tests/routes/v1/: test_v1_validate_upstream.py  test_validate_tags.py  test_validate_upstream.py
microservices/gatewayApi/tests/routes/v2/: test_gateway.py  test_gateway_api.py  test_gateway_delete.py  test_gateway_err_validations.py  test_gateway_local.py  test_v2_validate_upstream.py
microservices/gatewayApi/tests/utils/: test_add_version.py  test_clientid.py  test_validate_upstream.py  test_validator.py
microservices/gatewayApi/tests/v1/: test_api_health.py  test_gateway.py
microservices/gatewayApi/tests/v2/: test_activity_masking.py
microservices/gatewayApi/utils/: cleanup.py  clientid.py  deck.py  get_data_plane.py  masking.py  transforms.py  validators.py
microservices/gatewayApi/v1/: v1.py
microservices/gatewayApi/v1/auth/: auth.py
microservices/gatewayApi/v1/routes/: acl.py  catalog.py  dns.py  gateway.py  grafana.py  gw_status.py  namespace.py  namespaces.py  serviceaccounts.py  whoami.py
microservices/gatewayApi/v1/services/: namespaces.py
microservices/gatewayApi/v1/spec/: sample.json  spec.yaml  v1.yaml
microservices/gatewayApi/v2/: v2.py
microservices/gatewayApi/v2/auth/: auth.py
microservices/gatewayApi/v2/models/: gateway_config_pattern.py
microservices/gatewayApi/v2/routes/: authz.py  consumers.py  gateway.py  gw_status.py  migrate_v1.py  namespaces.py  whoami.py
microservices/gatewayApi/v2/services/: gateway_consumers.py  namespaces.py
microservices/gatewayApi/v2/spec/: spec.yaml
microservices/gatewayApi/v3/: v3.py
microservices/gatewayApi/v3/routes/: gateway.py  gw_status.py  whoami.py
microservices/gatewayApi/v3/spec/: spec.yaml
microservices/gatewayApiScheduler/: .gitignore  main.py  pyproject.toml
microservices/gatewayJobScheduler/: Dockerfile  README.md  app.py  main.py  pyproject.toml
microservices/gatewayJobScheduler/clients/: keycloak.py  kong.py  namespace.py
microservices/gatewayJobScheduler/tests/: conftest.py  pytest.ini  test_format_pem_data.py  test_get_certificate.py  test_get_namespaces_with_perm_data_plane.py  test_get_select_tag.py  test_is_host_custom_domain.py  test_transform_data_by_ns.py
microservices/kubeApi/: .gitignore  Dockerfile  README.md  app.py  custom_logging.py  entrypoint.sh  main.py  pyproject.toml  sonar.properties
microservices/kubeApi/app/auth/: auth.py  authz.py
microservices/kubeApi/app/clients/: keycloak.py  ocp_routes.py
microservices/kubeApi/app/clients/uma/: resourceset.py
microservices/kubeApi/app/config/: settings.py
microservices/kubeApi/app/routers/: routes.py
microservices/kubeApi/app/services/: namespaces.py
microservices/kubeApi/auth/: auth.py  authz.py  basic_auth.py
microservices/kubeApi/clients/: keycloak.py  ocp_routes.py  ocp_secret.py  ocp_services.py
microservices/kubeApi/config/: settings.py
microservices/kubeApi/logger/: log_config.py  utils.py
microservices/kubeApi/routers/: noop.py  routes.py  secrets.py
microservices/kubeApi/services/: namespaces.py
microservices/kubeApi/sync/: routes.py
microservices/kubeApi/templates/: routes.py  secrets.py  services.py
microservices/kubeApi/templates/v1/: routes.py  services.py
microservices/kubeApi/templates/v2/: routes.py
microservices/kubeApi/templates/v3/: routes.py
microservices/kubeApi/tests/: conftest.py  test_api_health.py
microservices/kubeApi/tests/clients/: test_ocp_routes.py
microservices/kubeApi/tests/routers/: test_add_route.py  test_add_route_override.py  test_bulk_sync.py  test_bulk_sync_new_route.py  test_bulk_sync_override.py  test_bulk_sync_session_cookie.py  test_del_route.py  test_local_tls.py  test_service_status.py
openapi/: .env  simple.yaml
(+2 files in other folders)
