[tool.poetry]
name = "gwa-api"
version = "1.0.0"
package-mode = false
description = "Gateway API for multi-tenant configuration on Kong API Gateway"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
werkzeug = "3.1.3"
cryptography = "44.0.1"
authlib = "1.4.1"
flask-swagger-ui = "4.11.1"
Jinja2 = "3.1.5"
PyYAML = "6.0.2"
flask = "3.1.0"
flask-compress = "1.17"
flask-cors = "5.0.0"
gevent = "24.11.1"
# greenlet = "2.0.2"
gunicorn = "23.0.0"
python-keycloak = "5.3.1"
requests = "^2.32"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
pycodestyle = "2.12.1"
pylint = "3.3.4"
python-dotenv = "^1.0.0"
pytest = "^8.2.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"
pipdeptree = "^2.25.0"

[tool.coverage.run]
relative_files = true
omit = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
