[tool.poetry]
name = "gwa-api"
version = "1.0.0"
package-mode = false
description = "Gateway API for multi-tenant configuration on Kong API Gateway"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
werkzeug = "3.1.3"
cryptography = "44.0.3"
authlib = "1.5.2"
flask-swagger-ui = "4.11.1"
Jinja2 = "3.1.6"
PyYAML = "6.0.2"
flask = "3.1.1"
flask-compress = "1.17"
flask-cors = "6.0.0"
gevent = "25.4.2"
# greenlet = "2.0.2"
gunicorn = "23.0.0"
python-keycloak = "5.5.0"
requests = "^2.32"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
pycodestyle = "2.13.0"
pylint = "3.3.7"
python-dotenv = "^1.0.0"
pytest = "^8.2.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"
pipdeptree = "^2.25.0"

[tool.coverage.run]
relative_files = true
omit = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
