[tool.poetry]
name = "gatewayapischeduler"
version = "1.0.0"
package-mode = false
description = "Job scheduler to run jobs at specified intervals"
authors = ["Nithin Shekar Kuruba <nithinshekar.kuruba@gov.bc.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
schedule = "^1.2.1"
python-keycloak = "^0.26.1"
cryptography = "^43.0.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
python-dotenv = "^0.19.1"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
coverage = "<8.0"

[tool.coverage.run]
relative_files = true
omit = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
