[tool.poetry]
name = "gwa-kube-api"
version = "1.0.0"
description = ""
authors = ["Nithin Shekar Kuruba <nithinshekar.kuruba@gov.bc.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
PyYAML = "^6.0"
python-keycloak = "^0.26.1"
Authlib = "^0.15.4"
httpx = "^0.20.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
